// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconExpand should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-expand "
  height={13}
  viewBox="0 0 13 13"
  width={13}
>
  <path
    className="fill-color"
    d="M12 0H6a1 1 0 0 0 0 2h5v5a1 1 0 0 0 2 0V1a1 1 0 0 0-1-1zM7 11H2V6a1 1 0 0 0-2 0v6a1 1 0 0 0 1 1h6a1 1 0 0 0 0-2z"
    fill="#979797"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconExpand should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-expand test"
  height={100}
  title="title"
  viewBox="0 0 13 13"
  width={200}
>
  <path
    className="fill-color"
    d="M12 0H6a1 1 0 0 0 0 2h5v5a1 1 0 0 0 2 0V1a1 1 0 0 0-1-1zM7 11H2V6a1 1 0 0 0-2 0v6a1 1 0 0 0 1 1h6a1 1 0 0 0 0-2z"
    fill="#979797"
  />
</AccessibleSVG>
`;
